--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,183 @@
-body{
-    background-color: aqua;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: content-box;
 }
+
+.header, .nav, .header__label {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.header__img {
+  width: 25%;
+  margin: 15px;
+}
+.header__img .header__img--logo {
+  width: 100px;
+  height: 100px;
+}
+.header__label {
+  width: 75%;
+  height: 14vh;
+  justify-content: center;
+  background-color: #EB1768;
+}
+.header__label .header__label--input {
+  width: 50%;
+  padding: 8px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+}
+.header__label .header__label--input::-moz-placeholder {
+  font-family: "Overpass", sans-serif;
+  font-weight: 100;
+  color: #BCBCBC;
+  text-align: center;
+}
+.header__label .header__label--input::placeholder {
+  font-family: "Overpass", sans-serif;
+  font-weight: 100;
+  color: #BCBCBC;
+  text-align: center;
+}
+.header__label .header__label--m {
+  margin: 12px;
+}
+.header__label .header__label--m .header__m--menu {
+  width: 30px;
+  height: 33px;
+}
+
+.nav {
+  justify-content: flex-end;
+}
+.nav__container {
+  display: grid;
+  grid-template-columns: 1fr 30px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  align-items: center;
+  margin-right: 15px;
+  padding: 3px;
+  background-color: #EB1768;
+}
+.nav__container .nav__container--ul {
+  padding-left: 10px;
+  font-family: "Overpass", sans-serif;
+  font-weight: 300;
+  color: white;
+}
+.nav__container .nav__container--list {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  margin-top: 5px;
+  top: 160px;
+  background-color: rgba(235, 23, 104, 0.8117647059);
+}
+.nav__container .nav__container--list .nav__container--a {
+  padding: 5px 15px 0 10px;
+  font-family: "Overpass", sans-serif;
+  font-weight: 100;
+  color: white;
+}
+.nav__container .nav__container--list .nav__container--a:hover {
+  font-family: "Overpass", sans-serif;
+  font-weight: 400;
+  color: black;
+  background-color: white;
+}
+.nav__container .active {
+  display: none;
+}
+.nav__container .nav__container--img {
+  height: 20px;
+  position: static;
+}
+
+.section {
+  width: 100%;
+  margin-top: 20px;
+}
+.section__container {
+  margin-bottom: 25px;
+}
+.section__container .section__container--subtitle {
+  margin-left: 15px;
+  margin-right: 15px;
+  border-bottom: 5px solid #EBD717;
+}
+.section__container .section__container--subtitle .section__container--h2 {
+  padding-bottom: 5px;
+  font-family: "Cabin", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: #17C4EB;
+}
+.section__container .section__container--see {
+  display: flex;
+  justify-content: flex-end;
+  margin: 12px 15px;
+}
+.section__container .section__container--see .section__container--ver {
+  font-family: "Overpass", sans-serif;
+  font-size: 16px;
+  text-decoration: none;
+  color: black;
+}
+.section__container .section__container--see .section__container--ver:hover {
+  text-decoration: underline;
+}
+.section__container .section__container--peliculas {
+  max-height: 300px;
+  display: flex;
+  overflow-x: scroll;
+  -moz-column-gap: 15px;
+       column-gap: 15px;
+  margin: 0 15px;
+}
+.section__container .section__container--peliculas .section__container--movie {
+  min-width: 200px;
+  height: 300px;
+  line-height: 110px;
+  background-color: aqua;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+}
+.footer__container {
+  width: 75%;
+  height: 14vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #EB1768;
+}
+.footer__container .footer__container--h3 {
+  width: 80%;
+  font-family: "Hind", sans-serif;
+  font-size: 18px;
+  color: white;
+}
+.footer .footer__logo {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 5px 5px 5px;
+  background-color: white;
+}
+.footer .footer__logo .footer__logo--p {
+  font-family: "Overpass", sans-serif;
+  font-size: 14px;
+}
+.footer .footer__logo .footer__logo--icon {
+  width: 80%;
+  margin: 5px;
+}/*# sourceMappingURL=app.css.map */
