--- a/styles/app.scss
+++ b/styles/app.scss
@@ -51,12 +51,13 @@
 .nav{
     justify-content: flex-end;
     @extend .header;
+    
     &__container{
+        margin-right: $margin-right-left;
         display: grid;
         grid-template-columns: 1fr 30px;
         column-gap: 10px;
         align-items: center;
-        margin-right: $margin-right-left;
         padding: 3px;
         background-color: $color-primary;
 
@@ -68,11 +69,11 @@
         }
 
         .nav__container--list{
+            margin-top: 5px;
             display: flex;
             justify-content: center;
             flex-direction: column;
             position: absolute;
-            margin-top: 5px;
             top: 160px;
             background-color: #eb1768cf;
 
@@ -101,15 +102,42 @@
     }
 }
 
+.navArrow{
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+    margin-left: $margin-right-left;
+    margin-right: $margin-right-left;
+    
+    .navArrow__back{
+        width: 50px;
+        height: 50px;
+    }
+
+    .navArrow__gender{
+        margin-left: 15px;
+        font-family: $font-title;
+        font-size: 22px;
+        color: $color-secundario;
+    }
+}
+
+/* .inactive{
+    display: none;
+} */
+
 .section{
     width: 100%;
     margin-top: 20px;
+
     &__container{
         margin-bottom: 25px;
+        
         .section__container--subtitle{
             margin-left: $margin-right-left;
             margin-right: $margin-right-left;
             border-bottom: 5px solid $color-terciario;
+            
             .section__container--h2{
                 padding-bottom: 5px;
                 font-family: $font-subtitle;
@@ -118,16 +146,19 @@
                 color: $color-secundario;
             }
         }
+        
         .section__container--see{
+            margin: 12px $margin-right-left;
             display: flex;
             justify-content: flex-end;
-            margin: 12px $margin-right-left;
+            
             .section__container--ver{
                 font-family: $font-parrafo;
                 font-size: $font-wParrafo;
                 text-decoration: none;
                 color: $black;
             }
+            
             .section__container--ver:hover{
                 text-decoration: underline;
             }
@@ -135,16 +166,118 @@
 
         .section__container--peliculas{
             max-height: 300px;
+            margin: 0 $margin-right-left;
             display: flex ;
             overflow-x: scroll;
             column-gap: 15px;
-            margin: 0 $margin-right-left;
+            
             .section__container--movie{
                 min-width: 200px;
                 height: 300px;
                 line-height: 110px;
-                background-color: aqua;
             }
+        }
+    }
+}
+
+.section2{
+    @extend .section;
+    
+    &__container{
+        margin-left: $margin-right-left;
+        margin-right: $margin-right-left;
+
+        .section2__container--imagen{
+            margin-bottom: 25px;
+            
+            .section2__container--imag{
+                width: 370px;
+                height: 370px;
+                object-fit: cover;
+                border-radius: 6%;
+            }
+        }
+
+        .section2__container--details{
+            margin-bottom: 15px;
+            
+            .section2__container--title{
+                margin-bottom: 15px;
+
+                .section2__container--titulo{
+                    font-family: $font-subtitle;
+                    font-size: 25px;
+                }
+            }
+
+            .section2__container--description{
+                .section2__container--sipnosis{
+                    font-family: $font-parrafo;
+                    font-weight: 200;
+                }
+            }
+        }
+
+        .section2__container--subtitulo{
+            .section2__container--Subtitle{
+                border-bottom: 5px solid $color-terciario;
+                
+                .section2__container--h2{
+                    padding-bottom: 5px;
+                    font-family: $font-subtitle;
+                    font-size: $font-wSubtitle;
+                    color: $color-secundario;
+                }
+            }
+            .section2__container--puntos{
+                margin-top: 15px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                
+                .section2__container--star{
+                    width: 40px;
+                }
+                
+                .section2__container--point{
+                    font-family: $font-subtitle;
+                    font-size: 30px;
+                    font-weight: 600;
+                    color: $color-primary;
+                }
+            }
+
+            .section2__container--categorias{
+                @extend .section2__container--puntos;
+                
+                .section2__container--p{
+                    margin: 0 10px 10px 0;
+                    font-family: $font-parrafo;
+                    font-style: italic;    
+                }
+            }
+        }
+    }
+}
+
+.section3{
+    width: 100%;
+
+    .section3__container{
+        margin-left: $margin-right-left;
+        margin-right: $margin-right-left;
+        margin-top: 25px;
+        margin-bottom: 25px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        column-gap: 5px;
+        row-gap: 10px;
+        
+        .section3__container--img{
+            width: 182px;
+            height: 277px;
+            object-fit: cover;
         }
     }
 }
@@ -152,6 +285,7 @@
 .footer{
     width: 100%;
     display: flex;
+
     &__container{
         width: 75%;
         height: 14vh;
@@ -159,6 +293,7 @@
         justify-content: center;
         align-items: center;
         background-color: $color-primary;
+        
         .footer__container--h3{
             width: 80%;
             font-family: $font-title;
@@ -166,6 +301,7 @@
             color: $white;
         }
     }
+    
     .footer__logo{
         width: 25%;
         display: flex;
@@ -174,10 +310,12 @@
         flex-direction: column;
         padding: 0 5px 5px 5px;
         background-color: $white;
+        
         .footer__logo--p{
             font-family: $font-parrafo;
             font-size: 14px;
         }
+        
         .footer__logo--icon{
             width: 80%;
             margin: 5px;
