--- a/styles/app.scss
+++ b/styles/app.scss
@@ -122,9 +122,9 @@
     }
 }
 
-/* .inactive{
+.inactive{
     display: none;
-} */
+}
 
 .section{
     width: 100%;
@@ -191,7 +191,7 @@
             margin-bottom: 25px;
             
             .section2__container--imag{
-                width: 370px;
+                width: 384px;
                 height: 370px;
                 object-fit: cover;
                 border-radius: 6%;
