--- a/styles/app.scss
+++ b/styles/app.scss
@@ -82,6 +82,7 @@
                 font-family: $font-parrafo;
                 font-weight: 100;
                 color: $white;
+                text-decoration: underline;
             }
             .nav__container--a:hover{
                 font-family: $font-parrafo;
