media querys tablets

--- a/styles/app.css
+++ b/styles/app.css
@@ -316,6 +316,7 @@
   margin: 5px;
 }
 
+/*Medida de celulares*/
 @media screen and (max-width: 640px) {
   .header .header__container .header__img {
     display: flex;
@@ -371,7 +372,8 @@
     width: 75%;
   }
 }
-@media screen and (max-width: 1280px) {
+/*Medida de tablets y PC*/
+@media screen and (min-width: 992px) and (max-width: 1280px) {
   .header, .header .header__container .header__label {
     display: flex;
     justify-content: center;
@@ -389,7 +391,7 @@
   }
   .nav {
     width: 40%;
-    margin: 0 50%;
+    margin: 0 49.2%;
   }
   .nav__container {
     margin-right: 0;
@@ -408,6 +410,153 @@
   .section__container .section__container--subtitle {
     margin-left: 20px;
     margin-right: 0px;
+  }
+  .section__container .section__container--subtitle .section__container--h2 {
+    font-size: 30px;
+  }
+  .section__container .section__container--peliculas {
+    margin-left: 22px;
+    margin-right: 0;
+  }
+  .section2 .section2__container .section2__container--imagen .section2__container--imag {
+    height: 530px;
+  }
+  .section2 .section2__container .section2__container--details {
+    width: 83%;
+    margin: 0 9%;
+  }
+  .section2 .section2__container .section2__container--subtitulo, .section2 .section2__container .section2__container--similar {
+    width: 83%;
+    margin: 0 9%;
+  }
+  .section3 .section3__container {
+    width: 90%;
+    margin-left: 70px;
+    margin-right: 70px;
+    grid-template-columns: repeat(5, 180px);
+  }
+  .footer {
+    justify-content: center;
+  }
+  .footer .footer__container {
+    width: 68%;
+  }
+  .footer .footer__logo {
+    width: 10%;
+  }
+  .footer .footer__logo .footer__logo--icon {
+    width: 65%;
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 800px) {
+  .header .header__container .header__label {
+    height: 10vh;
+  }
+  .section__container .section__container--subtitle .section__container--h2 {
+    font-size: 30px;
+  }
+  .section3 .section3__container {
+    grid-template-columns: repeat(4, 182px);
+  }
+  .footer .footer__container {
+    height: 10vh;
+  }
+  .footer .footer__logo .footer__logo--icon {
+    width: 37%;
+  }
+}
+@media screen and (min-width: 650px) and (max-width: 960px) {
+  .header .header__container .header__label {
+    height: 17vh;
+  }
+  .section3 .section3__container {
+    grid-template-columns: repeat(4, 182px);
+  }
+  .footer .footer__container {
+    height: 17vh;
+  }
+  .footer .footer__logo .footer__logo--icon {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 1280px) and (max-width: 1440px) {
+  .header .header__container .header__img {
+    width: 15%;
+  }
+  .header .header__container .header__label {
+    width: 100%;
+    height: 11vh;
+    justify-content: space-around;
+  }
+  .header .header__container .header__label .header__label--input {
+    padding: 15px;
+    border-radius: 15px;
+  }
+  .header .header__container .header__label .header__label--input::-moz-placeholder {
+    font-size: 20px;
+  }
+  .header .header__container .header__label .header__label--input::placeholder {
+    font-size: 20px;
+  }
+  .nav .nav__container .nav__container--ul {
+    font-size: 30px;
+  }
+  .nav .nav__container .nav__container--list {
+    margin-top: 34px;
+  }
+  .nav .nav__container .nav__container--list .nav__container--a {
+    font-size: 26px;
+  }
+  .section__container .section__container--subtitle .section__container--h2 {
+    font-size: 30px;
+  }
+  .section3 .section3__container {
+    grid-template-columns: repeat(7, 182px);
+  }
+  .footer .footer__logo .footer__logo--icon {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 1280px) and (max-width: 1920px) {
+  .header, .header .header__container .header__label {
+    display: flex;
+    justify-content: center;
+  }
+  .header .header__container, .header .header__container .header__label .header__container {
+    width: 80%;
+  }
+  .header .header__container .header__img {
+    width: 9%;
+  }
+  .header .header__container .header__label {
+    width: 88%;
+    height: 13vh;
+    justify-content: space-evenly;
+  }
+  .nav {
+    width: 40%;
+    margin: 0 49.2%;
+  }
+  .nav__container {
+    margin-right: 0;
+  }
+  .nav__container .nav__container--list {
+    margin-top: 0;
+  }
+  .navArrow {
+    width: 34.3%;
+    margin: 0 10%;
+  }
+  .section__container {
+    width: 81%;
+    margin-left: 9%;
+  }
+  .section__container .section__container--subtitle {
+    margin-left: 20px;
+    margin-right: 0px;
+  }
+  .section__container .section__container--subtitle .section__container--h2 {
+    font-size: 30px;
   }
   .section__container .section__container--peliculas {
     margin-left: 22px;
