--- a/styles/app.css
+++ b/styles/app.css
@@ -185,6 +185,27 @@
   line-height: 110px;
 }
 
+.section__container--load, .section3 .section3__container .section__container--load4, .section2__container .section2__container--similar .section2__container--simiCate .section__container--load2, .section2__container .section2__container--imagen .section__container--load3 {
+  min-width: 200px;
+  height: 300px;
+  background-color: rgba(128, 128, 128, 0.133);
+  transition: transform 1.5;
+  animation-name: cards;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes cards {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(0.5);
+  }
+}
 .section2__container {
   margin-left: 15px;
   margin-right: 15px;
@@ -200,6 +221,10 @@
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 6%;
+}
+.section2__container .section2__container--imagen .section__container--load3 {
+  width: 384px;
+  height: 370px;
 }
 .section2__container .section2__container--details {
   margin-bottom: 15px;
@@ -251,11 +276,26 @@
   -moz-column-gap: 5px;
        column-gap: 5px;
   overflow-x: scroll;
+  /* @keyframes cards{
+      0%{
+          transform: scale(0);
+      }
+      50%{
+          transform: scale(0.8);   
+      }
+      100%{
+          transform: scale(0.5);   
+      }
+  } */
 }
 .section2__container .section2__container--similar .section2__container--simiCate .section2__container--simiPeli {
   min-width: 190px;
   height: 270px;
-  background-color: aqua;
+  /* background-color: aqua; */
+}
+.section2__container .section2__container--similar .section2__container--simiCate .section__container--load2 {
+  min-width: 190px;
+  height: 270px;
 }
 
 .section3 {
@@ -278,6 +318,10 @@
   height: 277px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.section3 .section3__container .section__container--load4 {
+  width: 180px;
+  height: 277px;
 }
 
 .footer {
