--- a/styles/app.scss
+++ b/styles/app.scss
@@ -183,7 +183,30 @@
                 height: 300px;
                 line-height: 110px;
             }
+
         }
+    }
+}
+
+.section__container--load{
+    min-width: 200px;
+    height: 300px;
+    background-color: rgba(128, 128, 128, 0.133);
+    transition: transform 1.5;
+    animation-name: cards;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes cards{
+    0%{
+        transform: scale(0);
+    }
+    50%{
+        transform: scale(0.8);   
+    }
+    100%{
+        transform: scale(0.5);   
     }
 }
 
@@ -204,6 +227,12 @@
                 height: 370px;
                 object-fit: cover;
                 border-radius: 6%;
+            }
+
+            .section__container--load3{
+                width: 384px;
+                height: 370px;
+                @extend .section__container--load;
             }
         }
 
@@ -288,8 +317,26 @@
                 .section2__container--simiPeli{
                     min-width: 190px;
                     height: 270px;
-                    background-color: aqua;
+                    /* background-color: aqua; */
                 }
+
+                .section__container--load2{
+                    min-width: 190px;
+                    height: 270px;
+                    @extend .section__container--load;
+                }
+
+                /* @keyframes cards{
+                    0%{
+                        transform: scale(0);
+                    }
+                    50%{
+                        transform: scale(0.8);   
+                    }
+                    100%{
+                        transform: scale(0.5);   
+                    }
+                } */
             }
         }
     }
@@ -313,6 +360,11 @@
             width: 180px;
             height: 277px;
             object-fit: cover;
+        }
+        .section__container--load4{
+            width: 180px;
+            height: 277px;
+            @extend .section__container--load;
         }
     }
 }
